# ftpm-glitcher

./: .gitignore  .gitmodules  README.md
glitcher-controller/: Cargo.toml
glitcher-controller/.cargo/: config.toml
glitcher-controller/src/: attack.rs  chip_select.rs  i2c-pio.rs  main.rs  serial.rs  spi_tap.rs  svi2.rs
glitcher-pc/: Cargo.toml
glitcher-pc/src/: cli.rs  console.rs  main.rs
glitcher-rpc/: Cargo.toml
glitcher-rpc/src/: lib.rs
helpers/: determine-params.py  extract-data.py  monitor.sh  pyproject.toml
wiring/: wiring.kicad_pro  wiring.kicad_sch
