[package]
name = "glitcher-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
glitcher-rpc = { path = "../glitcher-rpc", version = "0.1.0", features = ["mcu"]}

embassy-executor = { version = "0.10.0", path = "../embassy/embassy-executor", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.6.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.2", path = "../embassy/embassy-futures" }
fixed = "1.31.0"
pio = "0.3.0"


defmt = "1.0.1"
defmt-rtt = "1.0.0"


cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"


[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/rp" }
]
